reflect-demo/tests/errors/invalid_reflect_field_type_generic.rs
#[derive(reflect::Input, reflect::Output)]
struct MyStruct {
    field: Vec<NotReflectable>,
}

struct NotReflectable;

fn main() {}
